<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <item
        android:id="@+id/action_view_map"
        android:icon="@drawable/ic_map_24px "
        android:title="@string/menu_view_map"
        android:visible="true"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />

    <item
        android:id="@+id/action_settings"
        android:title="@string/menu_settings"
        android:visible="true"
        android:actionLayout="@layout/switch_layout"
        app:showAsAction="ifRoom">
    </item>

    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ic_reply_24px"
        android:title="@string/menu_share"
        android:visible="true"
        app:showAsAction="always" />
</menu>