<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_activity_card_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <TextView
        android:id="@+id/widget_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/box_medium_large"
        android:background="@color/colorAccent"
        android:gravity="start|center_vertical"
        android:paddingStart="@dimen/margin_medium"
        android:paddingLeft="@dimen/margin_medium"
        android:textAllCaps="true"
        android:textColor="@color/colorText"
        android:textSize="@dimen/text_large"
        tools:ignore="RtlSymmetry"
        tools:text="Coffee of the day" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_medium"
        android:background="@android:color/white"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/widget_cafe_logo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_medium"
            android:layout_weight="1"
            android:contentDescription="@string/sample_logo_descrp"
            android:adjustViewBounds="true"
            android:src="@drawable/logo_sample" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_marginLeft="@dimen/margin_medium"
            android:layout_marginTop="@dimen/margin_large"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/widget_cafe_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_small"
                android:drawablePadding="@dimen/margin_medium"
                android:textColor="@color/colorTextDark"
                android:textSize="@dimen/text_large"
                android:text="@string/sample_widget_name" />

            <TextView
                android:id="@+id/widget_cafe_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_small"
                android:drawablePadding="@dimen/margin_medium"
                android:textColor="@color/colorTextDark"
                android:textSize="@dimen/text_medium"
                android:text="@string/sample_widget_address" />

            <TextView
                android:id="@+id/widget_cafe_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_small"
                android:drawableStart="@drawable/ic_phone_sign"
                android:drawableLeft="@drawable/ic_phone_sign"
                android:drawablePadding="@dimen/margin_medium"
                android:textColor="@color/colorTextDark"
                android:textSize="@dimen/text_medium"
                android:text="@string/sample_widget_number" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>

